# rules_k8s

./: README.md  WORKSPACE  internal_deps.bzl
docs/: BUILD.bazel  rules.md
examples/: BUILD.bazel
examples/push/: BUILD.bazel  pod.yaml
k8s/: BUILD.bazel  defs.bzl  dependencies.bzl  repositories.bzl  toolchain.bzl
k8s/private/: BUILD.bazel  apply.bzl  kubectl.sh.tpl  resolve.sh.tpl  toolchains_repo.bzl  versions.bzl
scripts/: mirror_release.sh
