load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "kubectl.sh.tpl",
    "resolve.sh.tpl",
])

bzl_library(
    name = "kubectl_apply",
    srcs = ["apply.bzl"],
    visibility = [
        "//docs:__pkg__",
        "//k8s:__subpackages__",
    ],
    deps = [
        "@aspect_bazel_lib//lib:platform_utils",
        "@aspect_bazel_lib//lib:windows_utils",
        "@rules_oci//oci:defs",
    ],
)

bzl_library(
    name = "maybe",
    srcs = ["maybe.bzl"],
    visibility = ["//k8s:__subpackages__"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//k8s:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//k8s:__subpackages__"],
)
